--- a/index.html
+++ b/index.html
@@ -3,5 +3,11 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
+<p>pools!</p>
+<a href = "https://www.tutorialspoint.com" target = "_self"> 
+<img src = "/pools/1.jpeg alt = "pool_1" border = "0"/> 
+</a>
 </body>
+
 </html>
