--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <p>pools!</p>
 <a href = "https://www.tutorialspoint.com" target = "_self"> 
-<img src = "/pools/1.jpeg alt = "pool_1" border = "0"/> 
+<img src = "https://github.com/greycord/greycord/blob/main/pools/1.jpg?raw=true alt = "pool_1" border = "0"/> 
 </a>
 </body>
 
