--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<p>why so looooooooooong.</p>
+
 
 <p>pools!</p>
-<a href = "https://www.tutorialspoint.com" target = "_self"> 
-<img src = "https://github.com/greycord/greycord/blob/main/pools/1.jpg?raw=true alt = "pool_1" border = "0"/> 
+<a href = "2.html" target = "_self"> 
+<img src = "/pools/1.jpg alt = "pool_1" border = "5"/> 
 </a>
 </body>
 
