--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <p>pools!</p>
 <a href = "2.html" target = "_self"> 
-<img src = "/pools/1.jpg alt = "pool_1" border = "5"/> 
+<img src = "/pools/1.jpg" alt = "pool_1" border = "5"/> 
 </a>
 </body>
 
