--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<h1>Hello Alex. It's nice to see you here. Please sit back and enjoy some luxurious pools - just click on the the photo to see the next one!</h1> 
 <a href = "2.html" target = "_self"> 
 <img src = "https://github.com/greycord/greycord/blob/main/images/pools/1.jpg?raw=true" alt = "pool_1" border = "0"/> 
 </a>
